test/tests/nek_errors/invalid_settings/problem_mesh.i
[Mesh]
  type = NekRSMesh
  volume = true
[]

[Variables]
  [dummy]
  []
[]

[Kernels]
  [diffusion]
    type = Diffusion
    variable = dummy
  []
[]

[Executioner]
  type = Steady
[]
